--- a/src/app/recruiter-auth/recruiter-login/recruiter-login.component.html
+++ b/src/app/recruiter-auth/recruiter-login/recruiter-login.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <section class="container">
-      <header>Registration Form</header>
+      <header>Login Form</header>
       <form action="#" class="form" [formGroup]="login">
         
 
@@ -14,6 +14,7 @@
 
         <button (click)="loginRecruiter()">Submit</button>
       </form>
+      <button (click)="register()" class="btn btn-outline-primary m-2 p-2">Register here !!</button>
     </section>
  
 </div>
