--- a/src/app/admin-site/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-site/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,5 @@
+<!-- <iframe [src]="safePdfSrc" width="100%" height="500px"></iframe>
+<img [src]="'http://localhost:8080/api/getUploadfiles/20231110.jpg'" alt=""> -->
 <div class="container-xxl py-5">
   <div class="container">
     <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
