--- a/src/app/recruiter-portal/job-posting/job-posting.component.html
+++ b/src/app/recruiter-portal/job-posting/job-posting.component.html
@@ -11,59 +11,50 @@
         </div>
           <div class="row mb-5">
             <div class="col-lg-12">
-              <form class="p-2 p-md-5 border rounded" method="post">
+              <form class="p-2 p-md-5 border rounded" method="post" [formGroup]="jobData">
                 <h3 class="text-black mb-1 border-bottom pb-2">Job Details</h3>
                 
                 <div class="form-group">
-                  <label for="company-website-tw d-block" class=" mb-2 mt-2">Upload Featured Image</label> <br>
+                  <label for="company-website-tw d-block" class=" mb-2 mt-2">Upload JD</label> <br>
                   <label class="btn btn-green btn-md btn-file">
-                    Browse File<input type="file" hidden="">
+                    Browse File<input type="file" id="jdURL" name="jdURL" accept=".pdf,.doc,.docx" (change)="readJdURL($event)">
                   </label>
                 </div>
   
-                <div class="form-group">
-                  <label for="email" class="mb-2 mt-2">Email</label>
-                  <input type="text" class="form-control" id="email" placeholder="you@yourdomain.com">
-                </div>
+                
                 <div class="form-group">
                   <label for="job-title" class="mb-2 mt-2">Job Title</label>
-                  <input type="text" class="form-control" id="job-title" placeholder="e.g. Product Designer">
+                  <input type="text" class="form-control" id="job-title" placeholder="e.g. Product Designer" formControlName="jobTitle">
                 </div>
                 <div class="form-group">
                   <label for="job-location" class="mb-2 mt-2">Location</label>
-                  <input type="text" class="form-control" id="job-location" placeholder="e.g. New York">
+                  <input type="text" class="form-control" id="job-location" placeholder="e.g. New York" formControlName="location">
+                </div>
+                <div class="form-group">
+                  <label for="job-location" class="mb-2 mt-2">Salary</label>
+                  <input type="text" class="form-control" id="job-sal" placeholder="e.g. 100000" formControlName="salary">
                 </div>
   
                 <div class="form-group">
-                  <label for="job-region" class="mb-2 mt-2">Job Region</label>
-                  <select class="form-select selectpicker border rounded" id="job-region" data-style="btn-black" data-width="100%" data-live-search="true" title="Select Region">
-                    <option value="">Please choose an option</option>
-                        <option>San Francisco</option>
-                        <option>Palo Alto</option>
-                        <option>New York</option>
-                        <option>Manhattan</option>
-                        <option>Ontario</option>
-                        <option>Toronto</option>
-                        <option>Kansas</option>
-                        <option>Mountain View</option>
-                        <!-- <input type="file" hidden> -->
-                    </select>
+                  <label for="job-sector" class="mb-2 mt-2">Job sector</label>
+                  <div ngbDropdownMenu aria-labelledby="dropdownBasic1" >
+                    <button ngbDropdownItem (click)="selectSector(sec)" *ngFor="let sec of sector">{{sec.name}}</button>
+                </div>
                 </div>
   
                 <div class="form-group">
                   <label for="job-type" class="mb-2 mt-2">Job Type</label>
-                  <select class="form-select selectpicker border rounded" id="job-type" data-style="btn-black" data-width="100%" data-live-search="true" title="Select Job Type">
-                    <option value="">Please choose an option</option>
-                    <option>Part Time</option>
-                    <option>Full Time</option>
-                  </select>
+                  <div ngbDropdownMenu aria-labelledby="dropdownBasic1" >
+                    <button ngbDropdownItem (click)="selectJobType('Part Time')">Part Time</button>
+                    <button ngbDropdownItem (click)="selectJobType('Full Time')">Full Time</button>
+                </div>
                 </div>
   
   
                 <div class="form-group">
                   <label for="job-description" class="mb-3 mt-2 ">Job Description</label>
                   <div class="editor" id="editor-1">
-                    <textarea class="rounded" name="" id="" cols="124" rows="5" placeholder="Write a job description"></textarea>
+                    <textarea class="rounded" name="" id="" cols="124" rows="5" placeholder="Write a job description" formControlName="jobDescription"></textarea>
                   </div>
                 </div>
   
@@ -75,7 +66,8 @@
           </div>
           <div class="row ">
             <div class="d-flex justify-content-end">
-              <a href="#" class="btn btn-block btn-green btn-md p-2 ps-5 pe-5  me-5">Save Job</a>
+              <button class="btn btn-block btn-green btn-md p-2 ps-5 pe-5  me-5" (click)="postJob()">Save Job</button>
+              
             </div>
           </div>
         </section></div>
