Dynamic applicants and job lists

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,6 @@
 <router-outlet></router-outlet>
 <!-- <app-template></app-template> -->
 <!-- <app-selected-template></app-selected-template> -->
+<!-- <app-applicants></app-applicants> -->
+<!-- <app-job-listing></app-job-listing> -->
+<!-- <app-dashboard></app-dashboard> -->
