--- a/src/app/recruiter-portal/applicants/applicants.component.html
+++ b/src/app/recruiter-portal/applicants/applicants.component.html
@@ -5,24 +5,30 @@
   </div><!-- End Page Title -->
 
   <div class="container">
-      <div class="col-md-12">
+      <div class="col-md-12" *ngFor="let candidate of candidateDetails| paginate: { itemsPerPage: 10, currentPage: p }">
           <div class="card b-1 hover-shadow mb-20">
-              <div class="media card-body">
+              <div class="media card-body d-flex">
                   <div class="media-left pr-12">
                       <img class="avatar avatar-xl no-radius" src="assets/img/profile.avif" alt="...">
                   </div>
-                  <div class="media-body">
-                      <div class="mb-2">
-                          <span class="fs-20 pr-16">Hossein Shams</span>
+                  <div class="media-body ">
+                      <div class="mb-2 ">
+                          <span class="fs-20 pr-16 flex-start">{{candidate.firstname}} {{candidate.lastname}}</span>
+                          
                       </div>
-                      <small class="fs-16 fw-300 ls-1">Front-end developer</small>
+                      <small class="fs-16 fw-300 ls-1">{{candidate.resume}}</small>
+
                   </div>
-                  <div class="media-right text-right d-none d-md-block">
+                  
+                  <!-- <div class="media-right text-right d-none d-md-block">
                       <p class="fs-14 text-fade mb-12"><i class="fa fa-map-marker pr-1"></i> Menlo Park, CA</p>
                       <span class="text-fade"><i class="fa fa-money pr-1"></i> $60 per hour</span>
-                  </div>
+                  </div> -->
+                  
+                <button class="btn d-block w-10 d-sm-inline-block btn-light flex-end" style="width: fit-content;">View more</button>
+                  
               </div>
-              <footer class="card-footer flexbox align-items-center">
+              <!-- <footer class="card-footer flexbox align-items-center">
                   <div>
                       <strong>Applied on:</strong>
                       <span>21 Jan, 2023</span>
@@ -31,11 +37,12 @@
                       <a class="btn btn-xs fs-10 btn-bold btn-info" href="#">Download CV</a>
                       <a class="btn btn-xs fs-10 btn-bold btn-primary" href="#" data-toggle="modal" data-target="#modal-contact">Contact</a>
                       <a class="btn btn-xs fs-10 btn-bold btn-warning" href="#">Delete</a>
+                      
                   </div>
-              </footer>
+              </footer> -->
           </div>
       
-          <div class="card b-1 hover-shadow mb-20">
+          <!-- <div class="card b-1 hover-shadow mb-20">
               <div class="media card-body">
                   <div class="media-left pr-12">
                       <img class="avatar avatar-xl no-radius" src="assets/img/profile.avif" alt="">
@@ -123,7 +130,7 @@
                       <a class="btn btn-xs fs-10 btn-bold btn-warning" href="#">Delete</a>
                   </div>
               </footer>
-          </div>
+          </div> -->
       
           <nav>
               <ul class="pagination justify-content-center">
@@ -138,6 +145,7 @@
           </nav>
           <br>
       </div>
+      <pagination-controls (pageChange)="p = $event" class="float-right"></pagination-controls>
       </div>
 
 </main><!-- End #main -->
