--- a/src/app/recruiter-portal/job-listing/job-listing.component.css
+++ b/src/app/recruiter-portal/job-listing/job-listing.component.css
@@ -16,6 +16,10 @@ body{
 :root {
   scroll-behavior: smooth;
 }
+p {
+  font-family: Lato;
+  font-size: 15px;
+}
 
 body {
   font-family: "Open Sans", sans-serif;
