--- a/src/app/shared/recruiter-sidebar/recruiter-sidebar.component.html
+++ b/src/app/shared/recruiter-sidebar/recruiter-sidebar.component.html
@@ -47,7 +47,7 @@
     </li>
     <!-- End Profile Page Nav -->
     <li class="nav-item">
-      <a class="nav-link collapsed" >
+      <a class="nav-link collapsed" (click)="setActiveItem('logout')">
         <!-- <i class="bi bi-box-arrow-in-right"></i> -->
         <span>Logout</span>
       </a>
