--- a/src/app/recruiter-portal/job-listing/job-listing.component.html
+++ b/src/app/recruiter-portal/job-listing/job-listing.component.html
@@ -25,17 +25,18 @@
                               </div>
                           </div>
                           <div class="col-md-6 col-lg-4 my-3">
-                              <div class="select-container">
+                              <!-- <div class="select-container">
                                   <select class="custom-select">
                                       <option selected="">Location</option>
                                       <option value="1">Jaipur</option>
                                       <option value="2">Pune</option>
                                       <option value="3">Bangalore</option>
                                   </select>
-                              </div>
+                              </div> -->
+                              <input type="text" class="form-control p-4" placeholder="Enter Location" id="keywords">
                           </div>
                           <div class="col-md-6 col-lg-4 my-3">
-                              <button type="button" class="btn btn-lg btn-block btn-light btn-custom" id="contact-submit">
+                              <button type="button" class="btn btn-lg btn-block btn-light btn-custom px-5" style="margin-left: 70px;margin-top: 10px;" id="contact-submit">
                                   Search
                               </button>
                           </div>
@@ -43,24 +44,25 @@
                   </form>
 
                   <div class="filter-result">
-                      <p class="mb-30 ff-montserrat">Total Job Openings : 89</p>
+                      <!-- <p class="mb-30 ff-montserrat">Total Job Openings : 89</p> -->
+                      <p class="mb-30 ff-montserrat"></p>
 
-                      <div class="job-box d-md-flex align-items-center justify-content-between mb-30">
+                      <div class="job-box d-md-flex align-items-center justify-content-between mb-30" *ngFor="let job of jobDetails| paginate: { itemsPerPage: 10, currentPage: p }">
                           <div class="job-left my-4 d-md-flex align-items-center flex-wrap">
                               <div class="img-holder mr-md-4 mb-md-0 mb-4 mx-auto mx-md-0 d-md-none d-lg-flex">
-                                  FD
+                                  {{job.job_title[0]}}
                               </div>
                               <div class="job-content">
-                                  <h5 class="text-center text-md-left">Front End Developer</h5>
+                                  <h5 class="text-center text-md-left">{{job.job_title}}</h5>
                                   <ul class="d-md-flex flex-wrap text-capitalize ff-open-sans">
                                       <li class="mr-md-4">
-                                          <i class="zmdi zmdi-pin mr-2"></i> Los Angeles
+                                          <i class="zmdi zmdi-pin mr-2"></i> {{job.job_loc}}
                                       </li>
                                       <li class="mr-md-4">
-                                          <i class="zmdi zmdi-money mr-2"></i> 2500-3500/pm
+                                          <i class="zmdi zmdi-money mr-2"></i> {{job.salary}}
                                       </li>
                                       <li class="mr-md-4">
-                                          <i class="zmdi zmdi-time mr-2"></i> Full Time
+                                          <i class="zmdi zmdi-time mr-2"></i> {{job.job_type}}
                                       </li>
                                   </ul>
                               </div>
@@ -69,8 +71,8 @@
                               <a href="#" class="btn d-block w-100 d-sm-inline-block btn-light">View More</a>
                           </div>
                       </div>
-
-                      <div class="job-box d-md-flex align-items-center justify-content-between mb-30">
+                      <pagination-controls (pageChange)="p = $event" class="float-right"></pagination-controls>
+                      <!-- <div class="job-box d-md-flex align-items-center justify-content-between mb-30">
                           <div class="job-left my-4 d-md-flex align-items-center flex-wrap">
                               <div class="img-holder mr-md-4 mb-md-0 mb-4 mx-auto mx-md-0 d-md-none d-lg-flex">
                                   UX
@@ -143,13 +145,13 @@
                           <div class="job-right my-4 flex-shrink-0">
                               <a href="#" class="btn d-block w-100 d-sm-inline-block btn-light">View More</a>
                           </div>
-                      </div>
+                      </div> -->
 
                   </div>
               </div>
 
               <!-- START Pagination -->
-              <nav aria-label="Page navigation">
+              <!-- <nav aria-label="Page navigation">
                   <ul class="pagination pagination-reset justify-content-center">
                       <li class="page-item ">
                           <a class="page-link" href="#" tabindex="-1" aria-disabled="false">
@@ -165,7 +167,8 @@
                           </a>
                       </li>
                   </ul>
-              </nav>
+              </nav> -->
+              
               <!-- END Pagination -->
           </div>
       </div>
