--- a/src/app/recruiter-portal/job-listing/job-listing.component.html
+++ b/src/app/recruiter-portal/job-listing/job-listing.component.html
@@ -68,7 +68,7 @@
                               </div>
                           </div>
                           <div class="job-right my-4 flex-shrink-0">
-                              <a href="#" class="btn d-block w-100 d-sm-inline-block btn-light">View More</a>
+                              <a class="btn d-block w-100 d-sm-inline-block btn-light" (click)="selected(job)">View More</a>
                           </div>
                       </div>
                       <pagination-controls (pageChange)="p = $event" class="float-right"></pagination-controls>
