--- a/src/app/candidate-portal/hero/hero.component.html
+++ b/src/app/candidate-portal/hero/hero.component.html
@@ -44,7 +44,7 @@
             class="nav-link dropdown-toggle"
             data-bs-toggle="dropdown"
             [ngClass]="{
-              active: activeItem === 'jobList' || activeItem === 'jobDetail'
+              active: activeItem === 'jobList' || activeItem === 'jobDetail' || activeItem === 'jobRecommendation'
             }"
             >Jobs</a
           >
@@ -54,6 +54,9 @@
             >
             <a class="dropdown-item" (click)="setActiveItem('jobDetail')"
               >Job Detail</a
+            >
+            <a class="dropdown-item" (click)="setActiveItem('jobRecommendation')"
+              >Job Recommendation</a
             >
           </div>
         </div>
@@ -86,6 +89,12 @@
           >Contact</a
         >
       </div>
+      <a
+        class="nav-item nav-link"
+        [ngClass]="{ active: activeItem === 'profile' }"
+        (click)="setActiveItem('profile')"
+        >Profile</a
+      >
       <a
         [routerLink]="['']"
         class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block"
@@ -310,22 +319,31 @@
               <p class="mb-0">123 Vacancy</p>
             </a>
           </div>
-          <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s" >
-            <a class="cat-item rounded p-4" data-category="Business Development">
+          <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+            <a
+              class="cat-item rounded p-4"
+              data-category="Business Development"
+            >
               <i class="fa fa-3x fa-chart-line text-primary mb-4"></i>
               <h6 class="mb-3">Business Development</h6>
               <p class="mb-0">123 Vacancy</p>
             </a>
           </div>
           <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-            <a class="cat-item rounded p-4" data-category="Sales & Communication">
+            <a
+              class="cat-item rounded p-4"
+              data-category="Sales & Communication"
+            >
               <i class="fa fa-3x fa-hands-helping text-primary mb-4"></i>
               <h6 class="mb-3">Sales & Communication</h6>
               <p class="mb-0">123 Vacancy</p>
             </a>
           </div>
           <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-            <a class="cat-item rounded p-4" data-category="Teaching & Education">
+            <a
+              class="cat-item rounded p-4"
+              data-category="Teaching & Education"
+            >
               <i class="fa fa-3x fa-book-reader text-primary mb-4"></i>
               <h6 class="mb-3">Teaching & Education</h6>
               <p class="mb-0">123 Vacancy</p>
@@ -1189,10 +1207,13 @@
             <div class="d-flex align-items-center mb-5">
               <img
                 class="flex-shrink-0 img-fluid border rounded"
-                src="{{ selectedJob.logo_url }}"
+                [src]="
+                  API_URL.BACKEND_URL + 'getUploadfiles/' + selectedJob.logo_url
+                "
                 alt=""
-                style="width: 80px; height: 80px"
+                style="width: 120px; height: 80px"
               />
+
               <div class="text-start ps-4">
                 <h3 class="mb-3">{{ selectedJob.job_title }}</h3>
                 <span class="text-truncate me-3"
@@ -1424,14 +1445,22 @@
           </ul>
           <div class="tab-content">
             <div id="tab-1" class="tab-pane fade show p-0 active">
-              <div class="job-item p-4 mb-4" *ngFor="let job of jobListData">
+              <div
+                class="job-item p-4 mb-4"
+                *ngFor="
+                  let job of jobListData
+                    | paginate : { itemsPerPage: 10, currentPage: p }
+                "
+              >
                 <div class="row g-4">
                   <div class="col-sm-12 col-md-8 d-flex align-items-center">
                     <img
                       class="flex-shrink-0 img-fluid border rounded"
-                      src="{{ job.logo_url }}"
+                      [src]="
+                        API_URL.BACKEND_URL + 'getUploadfiles/' + job.logo_url
+                      "
                       alt=""
-                      style="width: 80px; height: 80px"
+                      style="width: 120px; height: 80px"
                     />
                     <div class="text-start ps-4">
                       <h5 class="mb-3">{{ job.job_title }}</h5>
@@ -1467,6 +1496,10 @@
                   </div>
                 </div>
               </div>
+              <pagination-controls
+                (pageChange)="p = $event"
+                class="float-right"
+              ></pagination-controls>
               <div class="job-item p-4 mb-4">
                 <div class="row g-4">
                   <div class="col-sm-12 col-md-8 d-flex align-items-center">
@@ -2055,6 +2088,126 @@
     </div>
     <!-- Jobs End -->
   </div>
+  <div *ngIf="activeItem === 'jobRecommendation'">
+    <!-- Header End -->
+    <div class="container-xxl py-5 bg-dark page-header mb-5">
+      <div class="container my-5 pt-5 pb-4">
+        <h1 class="display-3 text-white mb-3 animated slideInDown">Job List</h1>
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb text-uppercase">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Pages</a></li>
+            <li class="breadcrumb-item text-white active" aria-current="page">
+              Job List
+            </li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+    <!-- Header End -->
+
+    <!-- Jobs Start -->
+    <div class="container-xxl py-5">
+      <div class="container">
+        <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
+          Job Recommendations
+        </h1>
+        <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
+          <ul
+            class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5"
+          >
+            <li class="nav-item">
+              <a
+                class="d-flex align-items-center text-start mx-3 ms-0 pb-3 active"
+                data-bs-toggle="pill"
+                href="#tab-1"
+              >
+                <h6 class="mt-n1 mb-0">Featured</h6>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="d-flex align-items-center text-start mx-3 pb-3"
+                data-bs-toggle="pill"
+                href="#tab-2"
+              >
+                <h6 class="mt-n1 mb-0">Full Time</h6>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="d-flex align-items-center text-start mx-3 me-0 pb-3"
+                data-bs-toggle="pill"
+                href="#tab-3"
+              >
+                <h6 class="mt-n1 mb-0">Part Time</h6>
+              </a>
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div id="tab-1" class="tab-pane fade show p-0 active">
+              <div
+                class="job-item p-4 mb-4"
+                *ngFor="
+                  let job of jobRecommendationList
+                    | paginate : { itemsPerPage: 6, currentPage: p }
+                "
+              >
+                <div class="row g-4">
+                  <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                    <img
+                      class="flex-shrink-0 img-fluid border rounded"
+                      [src]="
+                        API_URL.BACKEND_URL + 'getUploadfiles/' + job.logo_url
+                      "
+                      alt=""
+                      style="width: 120px; height: 80px"
+                    />
+                    <div class="text-start ps-4">
+                      <h5 class="mb-3">{{ job['Job Title']}} {{ job['company id']}}</h5>
+                      <span class="text-truncate me-3"
+                        ><i class="fa fa-map-marker-alt text-primary me-2"></i
+                        >{{ job['job_loc'] }}</span
+                      >
+                      <span class="text-truncate me-3"
+                        ><i class="far fa-clock text-primary me-2"></i
+                        >{{ job['Job Experience'] }}</span
+                      >
+                      <span class="text-truncate me-0"
+                        ><i class="far fa-money-bill-alt text-primary me-2"></i
+                        >{{ job['Job Salary'] }}</span
+                      >
+                    </div>
+                  </div>
+                  <div
+                    class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center"
+                  >
+                    <div class="d-flex mb-3">
+                      <a class="btn btn-light btn-square me-3" href=""
+                        ><i class="far fa-heart text-primary"></i
+                      ></a>
+                      <a class="btn btn-primary" (click)="selectJob(job)"
+                        >Apply Now</a
+                      >
+                    </div>
+                    <small class="text-truncate"
+                      ><i class="far fa-calendar-alt text-primary me-2"></i
+                      >{{ job.application_deadline | date }}</small
+                    >
+                  </div>
+                </div>
+              </div>
+              <pagination-controls
+                (pageChange)="p = $event"
+                class="float-right"
+              ></pagination-controls>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Jobs End -->
+  </div>
   <div *ngIf="activeItem === 'jobCategory'">
     <!-- Header End -->
     <div class="container-xxl py-5 bg-dark page-header mb-5">
@@ -2463,6 +2616,53 @@
     </div>
     <!-- Contact End -->
   </div>
+  <div *ngIf="activeItem === 'profile'">
+    <div *ngFor="let section of ['personalInformation', 'skills', 'workExperience', 'education']">
+      <div class="container-xxl py-5">
+        <div class="container">
+          <h1 class="text-center mb-5">{{ section }}</h1>
+          <div class="row g-4">
+            <!-- Display section data -->
+            <ng-container *ngIf="activeItem2 !== section">
+              <!-- Display data in read-only mode -->
+              <!-- Loop through data based on section -->
+              <div *ngFor="let data of userDetails[section]; let i = index" class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
+                <!-- Display data fields -->
+                <div class="d-flex align-items-center bg-light rounded p-4">
+                  <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                    style="width: 45px; height: 45px">
+                    <i class="fa" [ngClass]="section === 'personalInformation' ? 'fa-user' : (section === 'skills' ? 'fa-cogs' : (section === 'workExperience' ? 'fa-briefcase' : 'fa-graduation-cap')) + ' text-primary'"></i>
+                  </div>
+                  <span>{{ section === 'personalInformation' ? data.name + ' - ' + data.email : (section === 'skills' ? data : (section === 'workExperience' ? data.company + ' - ' + data.role : data.institution + ' - ' + data.degree)) }}</span>
+                </div>
+              </div>
+            </ng-container>
+            <!-- Enable edit mode -->
+            <ng-container *ngIf="activeItem2 === section">
+              <!-- Enable edit mode for input fields -->
+              <!-- Loop through data based on section -->
+              <div *ngFor="let data of userDetails[section]; let i = index" class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
+                <!-- Editable input fields -->
+                <div class="d-flex align-items-center bg-light rounded p-4">
+                  <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3"
+                    style="width: 45px; height: 45px">
+                    <i class="fa" [ngClass]="section === 'personalInformation' ? 'fa-user' : (section === 'skills' ? 'fa-cogs' : (section === 'workExperience' ? 'fa-briefcase' : 'fa-graduation-cap')) + ' text-primary'"></i>
+                  </div>
+                  <input type="text" class="form-control" [(ngModel)]="userDetails[section][i]" [disabled]="!(editedIndex === i)" />
+                </div>
+              </div>
+              <!-- Save and cancel buttons -->
+              <div class="col-12">
+                <button class="btn btn-primary" (click)="saveEdit()">Save</button>
+                <button class="btn btn-secondary" (click)="cancelEdit()">Cancel</button>
+              </div>
+            </ng-container>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </div>
   <!-- Footer Start -->
   <div
     class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn"
@@ -2555,7 +2755,9 @@
   <!-- Footer End -->
 
   <!-- Back to Top -->
-  <a (click)="scrollUp()" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+  <a
+    (click)="scrollUp()"
+    class="btn btn-lg btn-primary btn-lg-square back-to-top"
     ><i class="bi bi-arrow-up"></i
   ></a>
 </div>
